<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/act_create_task_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="28dp"
            android:text="@string/act_create_task_title"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#131E69" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_task_item"
        android:orientation="vertical"
        android:padding="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/act_create_task_txt_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/act_create_task_title_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/act_create_task_edt_title"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_task_input"
                android:hint="@string/act_create_task_title_hint"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/act_create_task_txt_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/act_create_task_description_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/act_create_task_edt_description"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_task_input"
                android:hint="@string/act_create_task_description_hint"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/act_create_task_txt_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/act_create_task_date_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/act_create_task_edt_date"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_task_input"
                android:hint="@string/act_create_task_date_hint"
                android:inputType="datetime"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/act_create_task_create_btn"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:text="Create Now"
        android:background="@drawable/bg_btn_create_now"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <Button
        android:id="@+id/act_create_task_cancel_btn"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="#AFAFAF"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:text="Cancel"
        android:background="@drawable/bg_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

</LinearLayout>