<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="198dp">

        <TextView
            android:id="@+id/act_main_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/act_main_title"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/act_main_txt_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="#4A4E6A"
            android:text="@string/act_main_subtitle"
            android:textAlignment="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#131E69" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/act_main_tasks_list"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/act_main_txt_no_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/act_main_no_more_tasks"
        android:textAlignment="center"
        android:textSize="18sp" />
</LinearLayout>